[package]
name = "phoenix-lang"
description = "A simple, fast programming language"
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/TomtheCoder2/phoenix"
readme = "README.md"
keywords = ["phoenix", "programming", "language", "fast", "simple"]
categories = ["development-tools", "embedded", "programming-languages"]
authors = ["TomtheCoder2 (Nautilus) <@TomtheCoder2>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "11.0.0"
lazy_static = "1.4.0"
bincode = "1.3.3"
serde = { version = "1.0.26", features = ["derive"] }
clap = { version = "4.2.1", features = ["derive"] }
lz4-compression = "0.7.0"
colored = "2"


[profile.dev]
#opt-level = 3